--- a/Docker-Compose/docker-compose.yml
+++ b/Docker-Compose/docker-compose.yml
@@ -67,8 +67,8 @@ services:
       - ./internal_users.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/internal_users.yml
       - ./roles_mapping.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/roles_mapping.yml
       - ./config.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/config.yml
-      - ./prd-elastic-certificate.pem:/usr/share/elasticsearch/config/elastic-certificate.pem
-      - ./prd-elastic-privatekey.pem:/usr/share/elasticsearch/config/elastic-privatekey.pem
+      - ./elastic-certificate.pem:/usr/share/elasticsearch/config/elastic-certificate.pem
+      - ./elastic-privatekey.pem:/usr/share/elasticsearch/config/elastic-privatekey.pem
       - ./rootCA.pem:/usr/share/elasticsearch/config/rootCA.pem
 #      - ./tenants.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/tenants.yml
 #      - ./roles.yml:/usr/share/elasticsearch/plugins/opendistro_security/securityconfig/roles.yml
@@ -90,9 +90,9 @@ services:
       - odfe-net
     volumes:
       - ./custom-kibana.yml:/usr/share/kibana/config/kibana.yml
-      - ./prd-kibana-certificate.pem:/usr/share/kibana/config/kibana-certificate.pem
-      - ./prd-kibana-privatekey.pem:/usr/share/kibana/config/kibana-privatekey.pem
-      - ./prd-elastic-certificate.pem:/usr/share/kibana/config/elastic-certificate.pem
+      - ./kibana-certificate.pem:/usr/share/kibana/config/kibana-certificate.pem
+      - ./kibana-privatekey.pem:/usr/share/kibana/config/kibana-privatekey.pem
+      - ./elastic-certificate.pem:/usr/share/kibana/config/elastic-certificate.pem
 volumes:
   odfe-data1:
   odfe-data2:
