--- a/Kubernetes_YAMLs/kibana.yaml
+++ b/Kubernetes_YAMLs/kibana.yaml
@@ -102,3 +102,44 @@ spec:
       - name: esnode
         secret:
           secretName: esnode
+          
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  labels:
+    app: elk-kibana
+    cluster: dev
+    env: poc
+  name: elk-kibana-config
+  namespace: mykube
+data:
+  kibana.yml: |
+    elasticsearch.hosts: ${ELASTICSEARCH_URL}
+    elasticsearch.requestTimeout: 360000
+    elasticsearch.ssl.verificationMode: none
+    server.ssl.enabled: true
+    server.ssl.certificate: /usr/share/kibana/config/kibana-certificate.pem
+    server.ssl.key: /usr/share/kibana/config/kibana-privatekey.pem
+    elasticsearch.ssl.certificateAuthorities: /usr/share/kibana/config/elastic-certificate.pem
+    xpack.security.enabled: "false"
+    xpack.monitoring.enabled: "false"
+    xpack.apm.enabled: "false"
+    xpack.apm.ui.enabled: "false"
+    xpack.graph.enabled: "false"
+    xpack.grokdebugger.enabled: "false"
+    xpack.ml.enabled: "false"
+    xpack.reporting.enabled: "false"
+    xpack.searchprofiler.enabled: "false"
+    xpack.xpack_main.telemetry.enabled: "false"
+    xpack.monitoring.kibana.collection.enabled: "false"
+    xpack.spaces.enabled: "false"
+    xpack.infra.enabled: false
+    xpack.canvas.enabled: false
+    xpack.encryptedSavedObjects.encryptionKey: ${KIBANA_ENCRYPTION_KEY}
+    opendistro_security.cookie.secure: true
+    opendistro_security.cookie.password: ${KIBANA_ENCRYPTION_KEY}
+    opendistro_security.multitenancy.enabled: false
+    opendistro_security.multitenancy.tenants.enable_global: false
+    opendistro_security.multitenancy.tenants.enable_private: false
+    opendistro_security.multitenancy.enable_filter: false
